changes in the article.html, index.html, layout.html

--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -54,11 +54,7 @@
                 </div>
             </div>
         </main>
-        <script
-                crossorigin="anonymous"
-                integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA="
-                src="https://code.jquery.com/jquery-3.6.2.min.js"
-        ></script>
+        <div th:replace="layout/layout.html :: jquery"></div>
 
         <script>
             $(document).ready(function () {
