fix(article) v0.0.11-snapshot -changed all the article.html

--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -32,9 +32,8 @@
                     <h5 class="text-body mt-2"
                         th:text="'Marca: ' + ${propietats.article.marca.name} + ' - P/N: ' + ${propietats.article.marca.cif} "></h5>
 
-                    <h3 class="text-center mt-3" th:text="${preuEuros}"></h3>
-
-                    <input type="number" class="form-control mt-4" id="quantity" name="quantity" min="1"
+                    <h3 class="text-center mt-3" th:text="${preuEuros}" ></h3>
+                    <input type="number" class="mt-4" id="quantity" name="quantity" min="1"
                            th:max="${propietats.stock}" value="1">
                     <div class="d-flex justify-content-evenly mt-5">
                         <button class="btn btn-pc-economic-light col-5">Añadir al Carrito</button>
@@ -47,7 +46,6 @@
                         <h3>Propietades del producto</h3>
                         <p th:each="prop : ${propietats.valor}"
                            th:text="' - ' + ${prop.propietat.nom} + ': ' + ${prop.valor}"></p>
-
                         <h3>Descripción</h3>
                         <p th:text="${propietats.article.descripcio}"></p>
                     </div>
