--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="layout/layout.html :: head"></head>
-    <body class="bgbd">
+    <body class="bgbd" th:attr="data-id-article=${propietats.article.id}">
         <header th:replace="layout/layout.html :: header"></header>
-        <main class="container bg-cont mt-md-5 mt-5">
+        <main class="container bg-cont mt-md-5 mt-5" th:attr="data-id=${propietats.id}">
             <div class="col-12 row m-2 justify-content-center">
                 <div class="col-md-6 col-sm-12">
                     <div id="carouselExampleIndicators" class="carousel slide">
@@ -11,7 +11,8 @@
                             <div class="carousel-item" th:each="foto : ${imatges}"
                                  th:if=" ${propietats.id == foto.propietats.id}">
                                 <img class="d-block img-fluid imgSizeArticle"
-                                     th:src="@{/img/productes/{article}/{prop}/{foto}(article=${propietats.article.id},prop=${propietats.id},foto=${foto.path})}" id="propietats.id">
+                                     th:src="@{/img/productes/{article}/{prop}/{foto}(article=${propietats.article.id},prop=${propietats.id},foto=${foto.path})}"
+                                     id="propietats.id">
                             </div>
                         </div>
                         <button class="carousel-control-prev" data-bs-slide="prev"
@@ -25,6 +26,8 @@
                             <span class="carousel-color" aria-hidden="true"><i class="bi bi-arrow-right"></i></span>
                         </button>
                     </div>
+
+                    <div id="articles-disponibles" class="row mt-1"></div>
                 </div>
 
                 <div class="col-md-6 col-sm-12">
@@ -32,9 +35,22 @@
                     <h5 class="text-body mt-2"
                         th:text="'Marca: ' + ${propietats.article.marca.name} + ' - P/N: ' + ${propietats.article.marca.cif} "></h5>
 
-                    <h3 class="text-center mt-3" th:text="${preuEuros}" ></h3>
-                    <input type="number" class="mt-4" id="quantity" name="quantity" min="1"
-                           th:max="${propietats.stock}" value="1">
+                    <div class="row justify-content-center align-items-center">
+                        <div th:if="!${preuOferta}" class="col-6 d-flex">
+                            <span class="text-center mt-3 col h1" th:text="${preuEuros}"></span>
+                        </div>
+                        <div th:if="${preuOferta}" class="col-6 d-flex">
+                            <span class="text-center mt-3 col h1 text-decoration-line-through"
+                                  th:text="${preuEuros}"></span>
+                            <span class="text-center mt-3 col h1 text-danger" th:if="${preuOferta}"
+                                  th:text="${preuOferta}"></span>
+                        </div>
+                        <div class="col-12 mt-3 ">
+                            <label for="cantidad" class="form-label">Cantidad : </label>
+                            <input id="cantidad" class="border border-secondary" type="number" min="1" value="1"
+                                   th:max="${propietats.stock}">
+                        </div>
+                    </div>
                     <div class="d-flex justify-content-evenly mt-5">
                         <button class="btn btn-pc-economic-light col-5">Añadir al Carrito</button>
                         <button class="btn btn-pc-economic-dark col-5">Comprar</button>
@@ -59,6 +75,46 @@
                 $(".carousel-item:first").addClass("active");
             });
 
+            $.ajax({
+                url: "/api/articles",
+                type: "GET",
+                dataType: "json",
+                beforeSend: function () {
+                    $("#loading-wheel").show();
+                },
+                complete: function () {
+                    $("#loading-wheel").hide();
+                },
+                success: function (resp) {
+                    var articles = resp;
+                    var idPropietat = $("main").attr("data-id");
+                    var idArticle = $("body").attr("data-id-article");
+                    console.log(articles);
+
+                    for (var a of resp) {
+                        if (a.principal === true && a.propietats.id != idPropietat && a.propietats.article.id == idArticle) {
+                            $('#articles-disponibles').append(
+                                '<a href="http://localhost:8080/article/' + a.propietats.article.id + '/' + a.propietats.id + '" class="col-4 text-end text-decoration-none card d-flex align-items-center">' +
+                                '<span class="text-end h2 text-pc-economic-default bold col-12">' + a.propietats.preu + ' € </span>' +
+                                '<img src="/img/productes/' + a.propietats.article.id + '/' + a.propietats.id + '/' + a.path + '" class="width-minicards object-fit-cover mb-1" alt="img">' +
+                                '<div class="col-12 justify-content-center row">' +
+                                '<div id="' + a.propietats.id + '" class="row justify-content-around col-12"></div>' +
+                                '</div>' +
+                                '</div>' +
+                                '</a>'
+                            );
+
+                            for (v of a.propietats.valor){
+                                $('#' + a.propietats.id).append(
+                                    '<span class="text-center">' + v.propietat.nom + ': ' + v.valor + '</span> <br>'
+                                )
+
+                            }
+                        }
+
+                    }
+                }
+            });
 
 
         </script>
