--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -14,14 +14,14 @@
         <link
                 href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
                 rel="stylesheet"
-        /><!--
-        <script th:src="@{/js/bootstrap.js}"></script>-->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        />
+        <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+        <!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
                 integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
                 crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
                 integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-                crossorigin="anonymous"></script>
+                crossorigin="anonymous"></script>-->
     </head>
     <header th:fragment="navbar">
         <nav
@@ -97,18 +97,6 @@
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body" id="canvasBody">
-                <!--<div th:each="cat : ${categories}" class="row justify-content-center">
-                    <div class="btn-group col-12 mb-2">
-                        <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown"
-                                aria-expanded="false" th:text="${cat.name}"></button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" th:if="${cat.id == subcat.categoria.id}"
-                                   th:each="subcat : ${subcategories}" th:href="@{/categoria/{id}(id=${subcat.id})}"
-                                   th:text="${subcat.name}">Action</a></li>
-                        </ul>
-                    </div>
-                    <br>
-                </div>-->
             </div>
         </div>
 
