--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<head th:replace="layout/layout :: head"></head>
 <body>
-    <h1 th:href="@{/logout}">Logout</h1>
+    <header th:replace="layout/layout :: navbar"></header>
+    
+    <a th:href="@{/logout}">Logout</a>
+    <footer th:replace="layout/layout :: footer"></footer>
 </body>
 </html>
