--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -42,13 +42,13 @@
                     <div class="col-12">
                         <form class="d-flex mt-1">
                             <!-- Buscar -->
-                            <input
+                            <input id="cercador"
                                     aria-label="Search"
                                     class="form-control me-2"
                                     placeholder="Buscar"
                                     type="search"
                             />
-                            <button class="btn btn-pc-economic-dark" type="submit">
+                            <button class="btn btn-pc-economic-dark" id="cercar">
                                 <i class="bi bi-search"></i>
                             </button>
                         </form>
