--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -47,7 +47,7 @@
                         </div>
                         <div class="col-12 mt-3 ">
                             <label for="cantidad" class="form-label">Cantidad : </label>
-                            <input id="cantidad" class="border border-secondary" type="number" min="1" value="1"
+                            <input id="cantidad" class="form-control border border-secondary" type="number" min="1" value="1"
                                    th:max="${propietats.stock}">
                         </div>
                     </div>
@@ -94,17 +94,15 @@
                     for (var a of resp) {
                         if (a.principal === true && a.propietats.id != idPropietat && a.propietats.article.id == idArticle) {
                             $('#articles-disponibles').append(
-                                '<a href="http://localhost:8080/article/' + a.propietats.article.id + '/' + a.propietats.id + '" class="col-4 text-end text-decoration-none card d-flex align-items-center">' +
-                                '<span class="text-end h2 text-pc-economic-default bold col-12">' + a.propietats.preu + ' € </span>' +
+                                '<a href="http://localhost:8080/article/' + a.propietats.article.id + '/' + a.propietats.id + '" class="col-sm-3 col-6 text-end text-decoration-none card align-items-center">' +
+                                '<span class="text-end h4 text-pc-economic-default bold ">' + a.propietats.preu + ' € </span>' +
                                 '<img src="/img/productes/' + a.propietats.article.id + '/' + a.propietats.id + '/' + a.path + '" class="width-minicards object-fit-cover mb-1" alt="img">' +
-                                '<div class="col-12 justify-content-center row">' +
                                 '<div id="' + a.propietats.id + '" class="row justify-content-around col-12"></div>' +
-                                '</div>' +
                                 '</div>' +
                                 '</a>'
                             );
 
-                            for (v of a.propietats.valor){
+                            for (v of a.propietats.valor) {
                                 $('#' + a.propietats.id).append(
                                     '<span class="text-center">' + v.propietat.nom + ': ' + v.valor + '</span> <br>'
                                 )
