--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -4,11 +4,9 @@
     <body class="bgbd">
         <header th:replace="layout/layout.html :: header"></header>
         <main class="container-lg bg-cont mt-md-5 mt-1">
-            <section class="col-12 mt-5">
-                <img th:src="@{/img/static/slider.webp}" class="img-fluid col-12 h-50 slider-principal"
-                     alt="slider-principal">
-            </section>
+            <h1 class="mt-3 text-center"> Bienvenido a PCEconomic! </h1>
             <section id="productes" class="row mt-5 justify-content-center">
+                <h2 class="text-center">Estos son algunos de los productos que te pueden interesar</h2>
                 <div id="articles" class="row mt-2 justify-content-center mb-2">
                     <div class="spinner-border text-secondary" role="status" id="loading-wheel">
                         <span class="visually-hidden">Loading...</span>
@@ -20,6 +18,12 @@
     </body>
     <div th:replace="layout/layout.html :: jquery"></div>
     <script>
+        (function($) {
+            $('#foo').bind('click', function() {
+                alert('User clicked on "foo."');
+            });
+        })(jQuery);
+
         $.ajax({
             url: "/api/articles",
             type: "GET",
@@ -49,9 +53,7 @@
                         for (var i of articles) {
                             if (i.principal === true && i.propietats.esPrincipal === false && i.propietats.article.id === img.propietats.article.id) {
                                 $('#' + img.propietats.id).append(
-                                    '<a data-bs-toggle="tooltip" data-bs-placement="top"' +
-                                    '        data-bs-custom-class="custom-tooltip"' +
-                                    '        data-bs-title="'+ i.propietats.article.nom +'" class="col-4 mt-2 mb-2 row"' +
+                                    '<a class="col-3 mt-2 mb-2 row"' +
                                     ' href="http://localhost:8080/article/' + i.propietats.article.id + '/' + i.propietats.id
                                     + '"> <img src="/img/productes/' + i.propietats.article.id + '/' + i.propietats.id + '/' + i.path + '" class="col-12" alt="img"> </a>'
                                 );
