feat: carrito with sesions 20% done

--- a/public/PCEconomic/src/main/resources/templates/carrito.html
+++ b/public/PCEconomic/src/main/resources/templates/carrito.html
@@ -3,21 +3,50 @@
 <head th:replace="layout/layout :: head"></head>
 <body>
     <header th:replace="layout/layout :: navbar"></header>
-    <p>------------------------------</p>
-    <span th:each="ses : ${carrito}">
-       <p th:text="${ses.id}"></p>
-       <p th:text="${ses.article.nom}"></p>
-       <p th:text="${ses.preu}"></p>
-       <p th:text="${ses.stock}"></p>
-       <span th:each="val : ${ses.valor}">
-           <p th:text="${val.propietat.nom}"></p>
-           <p th:text="${val.valor}"></p>
-       </span>
-       <p>------------------------------</p>
-   </span>
-    <span th:each="foto : ${imatges}">
-        <p th:text="'Id prop + foto path: ' + ${foto.propietats.id} + ' | ' + ${foto.path}"></p>
-    </span>
+    <main>
+        <span th:text="${carrito}"></span>
+    </main>
+    <div th:replace="layout/layout.html :: jquery"></div>
+    <script>
+        /*$.ajax({
+            url: "/api/articles",
+            type: "GET",
+            dataType: "json",
+            beforeSend: function () {
+                $("#loading-wheel").show();
+            },
+            complete: function () {
+                $("#loading-wheel").hide();
+            },
+            success: function (resp) {
+                var articles = resp;
+                var idPropietat = $("main").attr("data-id");
+                var idArticle = $("body").attr("data-id-article");
+                console.log(articles);
+
+                for (var a of resp) {
+                    if (a.principal === true && a.propietats.id != idPropietat && a.propietats.article.id == idArticle) {
+                        $('#articles-disponibles').append(
+                            '<a href="http://localhost:8080/article/' + a.propietats.article.id + '/' + a.propietats.id + '" class="col-sm-3 col-6 text-end text-decoration-none card align-items-center">' +
+                            '<span class="text-end h4 text-pc-economic-default bold ">' + a.propietats.preu + ' € </span>' +
+                            '<img src="/img/productes/' + a.propietats.article.id + '/' + a.propietats.id + '/' + a.path + '" class="width-minicards object-fit-cover mb-1" alt="img">' +
+                            '<div id="' + a.propietats.id + '" class="row justify-content-around col-12"></div>' +
+                            '</div>' +
+                            '</a>'
+                        );
+
+                        for (v of a.propietats.valor) {
+                            $('#' + a.propietats.id).append(
+                                '<span class="text-center">' + v.propietat.nom + ': ' + v.valor + '</span> <br>'
+                            )
+
+                        }
+                    }
+
+                }
+            }
+        });*/
+    </script>
     <footer th:replace="layout/layout.html :: footer"></footer>
 </body>
 </html>
