--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -15,6 +15,7 @@
                 href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
                 rel="stylesheet"
         />
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
         <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
         <!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
                 integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -39,19 +40,11 @@
                 </div>
                 <!-- Cercador -->
                 <div class="mx-auto order-2 col-xs-8 col-7">
-                    <div class="col-12">
-                        <form class="d-flex mt-1">
-                            <!-- Buscar -->
-                            <input id="cercador"
-                                   aria-label="Search"
-                                   class="form-control me-2"
-                                   placeholder="Buscar"
-                                   type="search"
-                            />
-                            <button class="btn btn-pc-economic-dark" id="cercar">
+                    <div class="col-12 d-flex align-items-center">
+                            <select class="my-auto" id="cercador"><option disabled selected>Buscador</option></select>
+                            <button class="btn btn-pc-economic-dark mx-1" id="cercar">
                                 <i class="bi bi-search"></i>
                             </button>
-                        </form>
                     </div>
                 </div>
                 <!-- Login + Carrito -->
@@ -116,9 +109,46 @@
                 crossorigin="anonymous"
                 integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA="
                 src="https://code.jquery.com/jquery-3.6.2.min.js"
-        >
-        </script>
+        > </script>
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
         <script>
+            $.ajax({
+                url: "/api/articles",
+                type: "GET",
+                success: function (data) {
+                    var a = data;
+                    var options = [];
+
+                    for (var a of data) {
+                        var propietats = "";
+                        for (var v of a.propietats.valor){
+                            propietats += " " + v.valor ;
+                        }
+                        if (a.principal === true ){
+                            $("#cercador").append(
+                                '<option value="/article/' + a.propietats.article.id + '/' + a.propietats.id + '">' + a.propietats.article.nom + " " + propietats + "</option>"
+                            );
+                        }
+                    }
+
+                    console.log(options);
+
+                    $("#cercador").select2({
+                        data: options,
+                        placeholder: "Buscar",
+                        allowClear: true,
+                        width: "100%"
+                    });
+
+                    $("#cercar").click(function () {
+                        console.log($("#cercador").val());
+                        window.location.href = $("#cercador").val();
+                    });
+                }
+            });
+
+
             $.ajax({
                 url: "/api/categories",
                 type: "GET",
