feat: carrito with sesions 90% done - malta maquetar

--- a/public/PCEconomic/src/main/resources/templates/carrito.html
+++ b/public/PCEconomic/src/main/resources/templates/carrito.html
@@ -4,9 +4,7 @@
     <body>
         <header th:replace="layout/layout :: navbar"></header>
         <main>
-            <section id="articles">
-
-            </section>
+            <section id="articles"></section>
         </main>
         <div th:replace="layout/layout.html :: jquery"></div>
         <script>
