feat: remove access to api endpoints to everyone thats not 127.0.0.1

--- a/public/PCEconomic/src/main/resources/templates/carrito.html
+++ b/public/PCEconomic/src/main/resources/templates/carrito.html
@@ -35,7 +35,8 @@
                                     if (c.idprops === a.propietats.id && a.principal === true) {
                                         $("#articles").append(
                                             '<p>' + a.propietats.article.nom +'</p>' +
-                                            '<p>' + c.quantity +'</p>'
+                                            '<p>' + c.quantity +'</p>' +
+                                            '<input  />'
                                         )
                                     }
                                 }
