--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
         })(jQuery);
 
         $.ajax({
-            url: "http://127.0.0.1:8080/api/articles",
+            url: "api/articles",
             type: "GET",
             dataType: "json",
             beforeSend: function() {
