feat: carrito with sessions 99% done - falta acabar de maquetar

--- a/public/PCEconomic/src/main/resources/templates/carrito.html
+++ b/public/PCEconomic/src/main/resources/templates/carrito.html
@@ -35,6 +35,12 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="d-flex flex-row-reverse">
+                <div class="p-2">
+                    <h3>Total: <span th:text="${carrito.total}"></span></h3>
+                    <button>Comprar</button>
+                </div>
+            </div>
 
         </main>
         <div th:replace="layout/layout.html :: jquery"></div>
